Revert "try to get cmdsrv to shutdown before apache"
This reverts commit d4655db3bc24b57e034134236bef4b7d67189a87.

tim find that systemd turns cmdsrv off during ansible run

--- a/roles/xsce-admin/templates/cmdsrv/xsce-cmdsrv.service.j2
+++ b/roles/xsce-admin/templates/cmdsrv/xsce-cmdsrv.service.j2
@@ -1,7 +1,6 @@
 [Unit]
 Description=Provides the XSCE Command Server
-Requires=httpd.service
-After=syslog.target network.target local-fs.target httpd.service
+After=syslog.target network.target local-fs.target
 
 [Service]
 Type=forking
